<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HexagonalColorPicker</string>
    <string name="tap_to_change">Tap to change text color!</string>
    <string name="settings">Settings</string>

    <string name="update">Update</string>
    <string name="palette_radius">Palette radius</string>

    <string name="dummy_category">Dummy category</string>
    <string name="dummy_preference">Dummy preference</string>
    <string name="dummy_preference_summary">Dummy preference summary</string>
    <string name="colors">Colors</string>
    <string name="color1">Color 1</string>
    <string name="color2">Color 2</string>
    <string name="tap_to_change_color">Tap to change color</string>
    <string name="switch_theme">Switch theme</string>

</resources>
