<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sk.hidasi.hexagonalcolorpickerexample.MainActivity">

    <TextView
        android:id="@+id/tapToChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_margin"
        android:text="@string/tap_to_change"
        android:textSize="20sp"/>

    <sk.hidasi.hexagonalcolorpicker.HexagonalColorPicker
        android:id="@+id/hexagonalColorPicker"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:layout_gravity="center_horizontal"
        android:padding="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/palette_radius" />

        <TextView
            android:id="@+id/editPaletteRadius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="right"
            android:ems="3"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekPaletteRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:max="4" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:onClick="onUpdateClick"
        android:text="@string/update">

        <requestFocus />
    </Button>

</LinearLayout>
